--- a/home.html
+++ b/home.html
@@ -7,38 +7,38 @@
       <title>My Courses</title>
    </head>
    <body>
-      <h1>Hello!</h1> 
+      <h1>Scrape Test</h1> 
       <!--Div 3-->
       <div class="card" id="card-python-for-beginners">
          <div class="card-header">
-            Python
+            Card number 1
          </div>
          <div class="card-body">
-            <h5 class="card-title">Python </h5>
-            <p class="card-text">Text 1</p>
-            <a href="#" class="btn btn-primary">Button1</a>
+            <h5 class="card-title">Card title 1</h5>
+            <p class="card-text">Card description 1</p>
+            <a href="#" class="btn btn-primary">Button1, 1$</a>
          </div>
       </div>
       <!--Div 3-->
       <div class="card" id="card-python-web-development">
          <div class="card-header">
-            Python 2
+            Card number 2
          </div>
          <div class="card-body">
-            <h5 class="card-title">Python 2</h5>
-            <p class="card-text">Text 2</p>
-            <a href="#" class="btn btn-primary">Button2</a>
+            <h5 class="card-title">Card title 2</h5>
+            <p class="card-text">Card description 2</p>
+            <a href="#" class="btn btn-primary">Button2, 2$</a>
          </div>
       </div>
       <!--Div 3-->
       <div class="card" id="card-python-machine-learning">
          <div class="card-header">
-            Python 3
+            Card number 3
          </div>
          <div class="card-body">
-            <h5 class="card-title">Python 3</h5>
-            <p class="card-text">Text 3</p>
-            <a href="#" class="btn btn-primary">Button3</a>
+            <h5 class="card-title">Card title 3</h5>
+            <p class="card-text">Card description 3</p>
+            <a href="#" class="btn btn-primary">Button3, 3$</a>
          </div>
       </div>
    </body>
